--- a/style.css
+++ b/style.css
@@ -72,11 +72,10 @@ main {
 }
 
 main video {
-    /* margin-top: 10.5rem; */
     position: relative;
     width: 100%;
     height: 1000px;
-    /* margin-bottom: -rem; */
+    margin-bottom: 2-rem;
 }
 
 .typewriter {
