--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-* {
+/* * {
     box-sizing: border-box;
-}
+} */
 
 body {
     margin: 0px;
@@ -33,7 +33,7 @@ nav ul {
 }
 
 nav ul li {
-    border-bottom: 1px solid black;
+    /* border-bottom: 1px solid black; */
 }
 
 #items li:hover {
@@ -59,7 +59,6 @@ nav ::before {
     right: 0;
     bottom: 0;
     left: 0;
-    inset: 0 0 0 0;
     background: hsl(200 100% 80%);
     z-index: -1;
     transition: transform .3s ease;
@@ -68,9 +67,10 @@ nav ::before {
 /* Video Session */
 
 main {
-    display: flexbox;
+    display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 main video {
@@ -89,7 +89,6 @@ main video {
     top: 80%;
     padding-top: 1.2rem;
     height: 5rem;
-    transform: translate(0, -40%);
     left: 50%;
     transform: translate(-50%, 0);
     color: white;
@@ -105,7 +104,7 @@ main video {
     font-size: 30px;
     font-weight: 700;
     border-right: 4px solid orange;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 
 @keyframes typing {
@@ -130,24 +129,389 @@ main video {
     }
 }
 
-/* Footer Main */
+/* Main */
+#home {
+    display: flex;
+}
 
 .projects {
     display: none;
+    font-family: 'work-sans', sans-serif;
+    animation: moveToRight 1s ease-in-out;
 }
+
+#projs {
+    padding-top: 11rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    column-gap: 2rem;
+    /* border-bottom: 1px solid black; */
+    /* flex-wrap: wrap; */
+    padding-left: 20px;
+}
+
+/* M365 Project */
+
+/* Carousel */
+
+.projects .m365kp {
+    display: flex;
+    /* flex-direction: column; */
+    column-gap: 2rem;
+}
+
+.m365-backend {
+    display: flex;
+    flex-direction: column;
+}
+
+.carousel-wrapper {
+    width: 520px;
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 5px 5px 25px 0px rgba(46, 61, 73, 0.2);
+    border-radius: 20px;
+    margin: 100px auto 20px;
+    background-color: #99C4C8;
+  }
+  
+  .carousel-container {
+    width: 400px;
+    height: 250px;
+    overflow: hidden;
+    margin: 0 auto;
+  }
+  
+  .carousel {
+    display: flex;
+    width: 1200px;
+    animation: sliding 12s infinite;
+  }
+  .carousel div {
+    width: 400px;
+    height: 250px;
+    background-size: cover;
+    background-position: center;
+  }
+  .carousel:hover {
+    animation-play-state: paused;
+  }
+  .carousel .image-one {
+    background-image: url("./assets/images/MicrosoftTeams-image\ \(3\).png");
+  }
+  .carousel .image-two {
+    background-image: url("./assets/images/MicrosoftTeams-image\ \(4\).png");
+  }
+  .carousel .image-three {
+    background-image: url("./assets/images/MicrosoftTeams-image\ \(6\).png");
+  }
+  
+  @keyframes sliding {
+    30% {
+      transform: translateX(0);
+    }
+    35% {
+      transform: translateX(-400px);
+    }
+    65% {
+      transform: translateX(-400px);
+    }
+    70% {
+      transform: translateX(-800px);
+    }
+    98% {
+      transform: translateX(-800px);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .carousel-wrapper {
+      width: 312px;
+      height: 210px;
+    }
+  
+    .carousel-container {
+      width: 240px;
+      height: 150px;
+    }
+  
+    .carousel {
+      width: 720px;
+    }
+    .carousel > div {
+      width: 240px;
+      height: 150px;
+    }
+  
+    @keyframes sliding {
+      30% {
+        transform: translateX(0);
+      }
+      35% {
+        transform: translateX(-240px);
+      }
+      65% {
+        transform: translateX(-240px);
+      }
+      70% {
+        transform: translateX(-480px);
+      }
+      98% {
+        transform: translateX(-480px);
+      }
+      100% {
+        transform: translateX(0);
+      }
+    }
+  }
+
+  #ic, #ic2, #ic3 {
+    /* font-family: 'Free Font Awesome 6'; */
+    font-size: 2rem;
+  }
+
+  img#csharp {
+    height: 2rem;
+    width: 2rem;
+    top: 0;
+  }
+
+  #efcore {
+    height: 5rem;
+  }
+
+  .tech-icons {
+    display: flex;
+    flex-direction: row;
+    column-gap: 2rem;
+  }
+
+/* M365 End Project */
+
+/* alt bike beginning project */
+
+.altbike-projects {
+    display: none;
+    font-family: 'work-sans', sans-serif;
+    animation: moveToRight 1s ease-in-out;
+}
+
+#altbike-projs {
+    display: none;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    column-gap: 2rem;
+    /* border-bottom: 1px solid black; */
+    /* background-color: #E5CB9F; */
+    /* flex-wrap: wrap; */
+    padding: 10px;
+}
+
+.carousel1-wrapper {
+    width: 520px;
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 5px 5px 25px 0px rgba(46, 61, 73, 0.2);
+    border-radius: 20px;
+    margin: 20px auto 20px;
+    background-color: #99C4C8;
+  }
+  
+  .carousel1-container {
+    width: 400px;
+    height: 250px;
+    overflow: hidden;
+    margin: 0 auto;
+  }
+  
+  .carousel1 {
+    display: flex;
+    width: 1200px;
+    animation: sliding 12s infinite;
+  }
+  .carousel1 div {
+    width: 400px;
+    height: 250px;
+    background-size: cover;
+    background-position: center;
+  }
+  .carousel1:hover {
+    animation-play-state: paused;
+  }
+  .carousel1 .image-one1 {
+    background-image: url("./assets/images/altbike1.jpg");
+  }
+  .carousel1 .image-two1 {
+    background-image: url("./assets/images/altbike2.jpg");
+  }
+  .carousel1 .image-three1 {
+    background-image: url("./assets/images/altbike3.jpg");
+  }
+  
+  @keyframes sliding {
+    30% {
+      transform: translateX(0);
+    }
+    35% {
+      transform: translateX(-400px);
+    }
+    65% {
+      transform: translateX(-400px);
+    }
+    70% {
+      transform: translateX(-800px);
+    }
+    98% {
+      transform: translateX(-800px);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+  @media screen and (max-width: 768px) {
+    .carousel1-wrapper {
+      width: 312px;
+      height: 210px;
+    }
+  
+    .carousel1-container {
+      width: 240px;
+      height: 150px;
+    }
+  
+    .carousel1 {
+      width: 720px;
+    }
+    .carousel1 > div {
+      width: 240px;
+      height: 150px;
+    }
+  
+    @keyframes sliding {
+      30% {
+        transform: translateX(0);
+      }
+      35% {
+        transform: translateX(-240px);
+      }
+      65% {
+        transform: translateX(-240px);
+      }
+      70% {
+        transform: translateX(-480px);
+      }
+      98% {
+        transform: translateX(-480px);
+      }
+      100% {
+        transform: translateX(0);
+      }
+    }
+  }
+
+  #ic, #ic2, #ic3 {
+    /* font-family: 'Free Font Awesome 6'; */
+    font-size: 2rem;
+  }
+
+  #csharp {
+    height: 5rem;
+    width: 5rem;
+  }
+
+  #efcore {
+    height: 5rem;
+  }
+
+  .tech-icons {
+    display: flex;
+    flex-direction: row;
+    column-gap: 2rem;
+  }
+
+/* alt bike end of project */
+
+/* about section */
 
 .about {
     display: none;
+    margin-top: 14rem;
+    /* border-bottom: 1px solid black; */
+    padding: 2rem 2rem;
+    font-family: 'work-sans', sans-serif;
+    column-gap: 2rem;
+    /* text-align: center; */
+    font-size: 1rem;
+    /* transform: translateX(100%); */
+    /* transition: transform 0.3s ease-in-out; */
+    animation: moveToRight 1s ease-in-out;
 }
+
+@keyframes moveToRight {
+    0% {
+        transform: translateX(-200px);
+    }
+    100% {
+        transform: translateX(0px);
+    }
+}
+
+.about img {
+    border-radius: 50%;
+}
+
+.abouttxt {
+    width: 700px;
+}
+
+/* end of about section */
+
+
+/* beginning of contact section */
 
 .contact {
     display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 14rem;
+    font-family: 'work-sans', sans-serif;
+    flex-direction: column;
+    /* border-bottom: 1px solid black; */
+    column-gap: 2rem;
 }
+
+.contact .flex-divs {
+  display: flex;
+  width: 80%;
+  column-gap: 2rem;
+}
+
+.social-media {
+  width: 30rem;
+}
+
+/* end of contact section */
+
+/* Footer Main */
 
 footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-top: 1px solid black;
 }
 
 footer .footer-text{
@@ -159,7 +523,6 @@ footer .footer-text{
     font-size: 1.5rem;
     line-height: 1rem;
     font-weight: 300;
-    border-top: 1px solid black;
 }
 
 #footer1 {
