--- a/style.css
+++ b/style.css
@@ -501,7 +501,24 @@ main video {
 
 .social-media {
   width: 30rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
+.linkedin, .github {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1rem;
+  height: fit-content;
+}
+
+.linkedin i, .github i {
+  font-size: 2rem;
+}
+
 
 /* end of contact section */
 
