add hover effect to link in alt-bike project and remove text decoration

--- a/style.css
+++ b/style.css
@@ -317,6 +317,14 @@ main video {
     padding: 10px;
 }
 
+.altbike-techstack a {
+  text-decoration: none;
+}
+
+.altbike-techstack a:hover {
+  color: white;
+}
+
 .carousel1-wrapper {
     width: 520px;
     height: 350px;
