--- a/style.css
+++ b/style.css
@@ -484,6 +484,15 @@ main video {
     width: 700px;
 }
 
+.about a {
+  text-decoration: none;
+  font-size: 1.4rem;
+}
+
+.about a:hover{
+  color: white;
+}
+
 /* end of about section */
 
 
