--- a/style.css
+++ b/style.css
@@ -323,12 +323,44 @@ main video {
     padding: 10px;
 }
 
+.altbike-techstack {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+.altbike-techstack i {
+  font-size: 2rem;
+}
+
 .altbike-techstack a {
   text-decoration: none;
 }
 
 .altbike-techstack a:hover {
   color: white;
+}
+
+.altbike-techstack a h3 {
+  padding: 0.5rem;
+  background-color: black;
+  display: inline-block;
+  column-gap: 2rem;
+  border-radius: 0.5rem;
+  color: white;
+  width: 7rem;
+  text-align: center;
+}
+
+.altbike-techstack a h3:hover {
+  padding: 0.5rem;
+  background-color: white;
+  display: inline-block;
+  column-gap: 2rem;
+  border-radius: 0.5rem;
+  color: black;
+  width: 7rem;
+  text-align: center;
 }
 
 .carousel1-wrapper {
@@ -489,10 +521,16 @@ main video {
 .about a {
   text-decoration: none;
   font-size: 1.4rem;
+  background-color: black;
+  color: white;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  font-weight: 600;
 }
 
 .about a:hover{
-  color: white;
+  background-color: white;
+  color: black;
 }
 
 /* end of about section */
@@ -521,14 +559,16 @@ main video {
 .social-media {
   width: 30rem;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
+  column-gap: 0.5rem;
 }
 
 .linkedin, .github {
   display: flex;
   justify-content: center;
+  flex-direction: row;
   align-items: center;
   column-gap: 1rem;
   height: fit-content;
@@ -540,20 +580,34 @@ main video {
 
 div.linkedin a {
   text-decoration: none;
+  background-color: black;
+  color: white;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  height: 80px;
+  text-align: center;
 }
 
 div.linkedin a:hover {
-  color: white;
-  transform: scale(1.1);
+  color: black;
+  background-color: white;
 }
 
 div.github a {
+  height: fit-content;
   text-decoration: none;
+  background-color: black;
+  color: white;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  text-align: center;
+  height: 80px;
+  width: 100px;
 }
 
 div.github a:hover {
-  color: white;
-  transform: scale(1.1);
+  color: black;
+  background-color: white;
 }
 
 .contact-form {
@@ -577,7 +631,7 @@ div.github a:hover {
 }
 
 .form input {
-  margin: 7px;
+  margin: 10px;
 }
 
 #email-input {
