--- a/style.css
+++ b/style.css
@@ -174,15 +174,19 @@ main video {
 }
 
 .carousel-wrapper {
-    width: 520px;
-    height: 350px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 5px 5px 25px 0px rgba(46, 61, 73, 0.2);
-    border-radius: 20px;
-    margin: 100px auto 20px;
-    background-color: #99C4C8;
+  /* width: 520px; */
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 5px 5px 25px 0px rgba(46, 61, 73, 0.2);
+  border-radius: 20px;
+  margin: 100px auto 20px;
+  background-color: #99C4C8;
+}
+
+  .carousel-wrapper:hover {
+    animation: bounce 1s;
   }
   
   .carousel-container {
@@ -364,7 +368,7 @@ main video {
 }
 
 .carousel1-wrapper {
-    width: 520px;
+    /* width: 520px; */
     height: 350px;
     display: flex;
     justify-content: center;
@@ -373,6 +377,27 @@ main video {
     border-radius: 20px;
     margin: 20px auto 20px;
     background-color: #99C4C8;
+  }
+
+  .carousel1-wrapper:hover {
+    animation: bounce 1s;
+  }
+
+  @keyframes bounce {
+    0%, 20%, 60%, 100% {
+      -webkit-transform: translateY(0);
+      transform: translateY(0);
+    }
+  
+    40% {
+      -webkit-transform: translateY(-20px);
+      transform: translateY(-20px);
+    }
+  
+    80% {
+      -webkit-transform: translateY(-10px);
+      transform: translateY(-10px);
+    }
   }
   
   .carousel1-container {
