--- a/style.css
+++ b/style.css
@@ -319,11 +319,13 @@ img#csharp {
   height: 2rem;
   width: 2rem;
   top: 0;
+  border-radius: 5px;
 }
 
 #efcore {
   height: 2rem;
   width: 2rem;
+  border-radius: 5px;
 }
 
 .tech-icons {
@@ -629,7 +631,7 @@ img#csharp {
   /* border-bottom: 1px solid black; */
   column-gap: 2rem;
   color: white;
-  animation: moveToRight 1s ease-in-out;
+  
 }
 
 .contact .flex-divs {
